--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <span class="letter">L</span>
         <span class="letter">O</span>
     </h1>
+
+    <style src='app.js'></style>
 </body>
 
 </html>
