--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="letter">O</span>
     </h1>
 
-    <style src='app.js'></style>
+    <script src="app.js"></script>
 </body>
 
 </html>
