--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
@@ -15,6 +18,7 @@
         <span class="letter">L</span>
         <span class="letter">L</span>
         <span class="letter">O</span>
+        <span class="letter">!</span>
     </h1>
     <script src="app.js"></script>
 </body>
