--- a/connect-four/index.html
+++ b/connect-four/index.html
@@ -11,6 +11,7 @@
   <div id="game">
     <table id="board"></table>
   </div>
+  <p><a href=".">Restart</a></p>
 
   <script src="connect4.js"></script>
 
