--- a/connect-four/index.html
+++ b/connect-four/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <head>
+  <meta property=”og:image” content=”connect4.jpg” />
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
 </head>
