--- a/redux/redux-mood-app/index.html
+++ b/redux/redux-mood-app/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Redux Demo</title>
+    <title>Redux Mood</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <div id="container">
+        <h1 id="mood"></h1>
+        <button id="happy">Happy</button>
+        <button id="sad">Sad</button>
+        <button id="angry">Angry</button>
+        <button id="confused">Confused</button>
+        <button id="random">Random</button>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.js"></script>
+    <script src="rootReducer.js"></script>
+    <script src="scripts.js"></script>
 </body>
+
 </html>
