--- a/redux/redux_intro/index.html
+++ b/redux/redux_intro/index.html
@@ -9,11 +9,17 @@
 </head>
 
 <body>
-    <h1>Redux Intro</h1>
+    <h1 id="counter">0</h1>
+    <button id="increment">+</button>
+    <button id="decrement">-</button>
+    <button id="reset">Reset</button>
+    <button id="double">Double</button>
 
     <script src="https://unpkg.com/redux"></script>
     <script src="reduxSetup.js"></script>
-    <script src="pureFuncs.js"></script>
+    <script src="counter.js"></script>
+
+    <!-- <script src="pureFuncs.js"></script> -->
 </body>
 
 </html>
